iptables.conf
# Generated by iptables-save v1.4.21 on Wed Mar 10 22:25:03 2021
*security
:INPUT ACCEPT [69124283:51364130994]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [90564760:28835624527]
COMMIT
# Completed on Wed Mar 10 22:25:03 2021
# Generated by iptables-save v1.4.21 on Wed Mar 10 22:25:03 2021
*raw
:PREROUTING ACCEPT [75753265:51682794364]
:OUTPUT ACCEPT [90564760:28835624527]
COMMIT
# Completed on Wed Mar 10 22:25:03 2021
# Generated by iptables-save v1.4.21 on Wed Mar 10 22:25:03 2021
*nat
:PREROUTING ACCEPT [14885402:712510340]
:INPUT ACCEPT [9610141:449787526]
:OUTPUT ACCEPT [6874040:457008487]
:POSTROUTING ACCEPT [6874040:457008487]
COMMIT
# Completed on Wed Mar 10 22:25:03 2021
# Generated by iptables-save v1.4.21 on Wed Mar 10 22:25:03 2021
*mangle
:PREROUTING ACCEPT [75753265:51682794364]
:INPUT ACCEPT [75753265:51682794364]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [90564760:28835624527]
:POSTROUTING ACCEPT [90564760:28835624527]
COMMIT
# Completed on Wed Mar 10 22:25:03 2021
# Generated by iptables-save v1.4.21 on Wed Mar 10 22:25:03 2021
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [86911146:26986809431]
:LOGNDROP - [0:0]
-A INPUT -p udp -m state --state NEW -m udp --dport 514 -j ACCEPT
-A INPUT -i eth0 -p tcp -m state --state NEW -m multiport --dports 22,25,80,422,443,465,993,8000,8443,25565 -j ACCEPT
#-A INPUT -p tcp -m state --state NEW -m tcp --dport 465 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
#-A INPUT -s 50.116.45.145/32 -d 50.116.45.145/32 -j ACCEPT
#-A INPUT -s 50.116.45.145/32 -d 127.0.0.1/32 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -d 127.0.0.1/32 -j ACCEPT
-A INPUT -j LOGNDROP
-A OUTPUT -p icmp -m icmp --icmp-type 0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -s 127.0.0.1/32 -d 127.0.0.1/32 -j ACCEPT
-A LOGNDROP -p tcp -m limit --limit 5/min -j LOG --log-prefix "Denied TCP: " --log-level 7
-A LOGNDROP -p udp -m limit --limit 5/min -j LOG --log-prefix "Denied UDP: " --log-level 7
-A LOGNDROP -p icmp -m limit --limit 5/min -j LOG --log-prefix "Denied ICMP: " --log-level 7
-A LOGNDROP -j DROP
COMMIT
# Completed on Wed Mar 10 22:25:03 2021
